platform/k8s/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: smartshop
spec:
  replicas: 2  # Chạy 2 bản sao để thực hành cân bằng tải (Load Balancing)
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: api
        image: ealen/echo-server:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-api
  namespace: smartshop
spec:
  selector:
    app: order-api
  ports:
  - port: 80
    targetPort: 8080
