platform/k8s/3-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
  namespace: smartshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: storefront
  namespace: smartshop
spec:
  type: NodePort
  selector:
    app: storefront
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
