platform/k8s/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartshop-ingress
  namespace: smartshop
  
spec:
  ingressClassName: nginx
  rules:
  - host: smartshop.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: order-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storefront
            port:
              number: 80
